WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24556
Missing break statement in GeolocationServiceMac error handling
https://bugs.webkit.org/show_bug.cgi?id=24556
Summary
Missing break statement in GeolocationServiceMac error handling
Greg Bolsinga
Reported
2009-03-12 13:31:43 PDT
Missing break statement in GeolocationServiceMac error handling
Attachments
patch fix
(1.33 KB, patch)
2009-03-12 13:36 PDT
,
Greg Bolsinga
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Greg Bolsinga
Comment 1
2009-03-12 13:36:52 PDT
Created
attachment 28547
[details]
patch fix
Greg Bolsinga
Comment 2
2009-03-12 13:44:54 PDT
bolsinga:WebKit bolsinga$ svn commit Sending WebCore/ChangeLog Sending WebCore/platform/mac/GeolocationServiceMac.mm Transmitting file data .. Committed revision 41647.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug