2009-03-12  Greg Bolsinga  <bolsinga@apple.com>

Reviewed by Simon Fraser.

        Missing breaks in switch statement
        https://bugs.webkit.org/show_bug.cgi?id=24556

        * platform/mac/GeolocationServiceMac.mm:
        (-[WebCoreCoreLocationObserver locationManager:didFailWithError:]):



Canonical link: https://commits.webkit.org/33706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41647 268f45cc-cd09-0410-ab3c-d52691b4dbfc